--- a/demo-yaml-files/pod/pod-definition.yml
+++ b/demo-yaml-files/pod/pod-definition.yml
@@ -6,7 +6,11 @@ metadata:
     name: myapp-pod
     app: myapp
     type: pod
+    tier: front-end
 spec:
   containers:
     - name: nginx-image
       image: nginx
+
+# kubectl create -f pod-definition.yml
+# kubectl get pods -o wide
