--- a/demo-yaml-files/replicaset/replicaset-definition.yml
+++ b/demo-yaml-files/replicaset/replicaset-definition.yml
@@ -16,13 +16,17 @@ spec:
       containers:
         - name: nginx-image
           image: nginx
-  replicas: 6
+
+  replicas: 3
+
   selector:
     matchLabels:
-      type: front-end
+      app: myapp
+
 
 # kubectl create -f replicaset-definition.yml
 # kubectl get replicaset
+# kubectl describe replicaset
 # kubectl get pods
 
 # update file then run:
@@ -32,4 +36,8 @@ spec:
 #?? kubectl scale --replicas=2 replicaset-definition.yml
 # kubectl scale --replicas=2 replicaset myapp-replicaset
 
+# kubectl delete pod myapp-replicaset-4tc2t
+
+
 # kubectl delete replicaset myapp-replicaset
+
