updating deployment file with notes

--- a/demo-yaml-files/deployment/deployment-definition.yml
+++ b/demo-yaml-files/deployment/deployment-definition.yml
@@ -45,3 +45,7 @@ spec:
 
 # to deploy without a pod definition file (automatically creates a deployment:
 # kubectl run nginx --image=nginx
+#
+# to delete a deployment:
+# kubectl delete deployment myapp-deployment
+#
